--- a/src/PowerplantCodingChallenge/PowerplantUIL/Properties/launchSettings.json
+++ b/src/PowerplantCodingChallenge/PowerplantUIL/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:37014",
-      "sslPort": 44355
+      "applicationUrl": "http://localhost:8888",
+      "sslPort": 0
     }
   },
   "profiles": {
@@ -16,7 +16,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:8888;http://localhost:8887",
+      "applicationUrl": "http://localhost:8888",
       "dotnetRunMessages": true
     },
     "IIS Express": {
@@ -31,8 +31,7 @@
       "commandName": "Docker",
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
-      "publishAllPorts": true,
-      "useSSL": true
+      "publishAllPorts": true
     }
   }
 }
